Bug 461760 - Sonar: Performance - Method invokes inefficient Number constructor; use static valueOf instead
Change-Id: I49dc3655e5cfc5b5eaa6cb59b504b8c40db5a578
Signed-off-by: <gautier.desaintmartinlacaze@gmail.com>