@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2014 IBM Corporation and others.
+ * Copyright (c) 2000, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -602,7 +602,7 @@ public class CompilerOptions {
 				irritant <<= 1;
 				String optionKey = optionKeyFromIrritant(irritant);
 				if (optionKey == null) continue;
-				OptionToIrritants.put(optionKey, new Long(irritant));
+				OptionToIrritants.put(optionKey, Long.valueOf(irritant));
 			}
 		}
 		Long irritant = (Long)OptionToIrritants.get(optionName);
