@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2010 IBM Corporation and others All rights reserved. This
+ * Copyright (c) 2009, 2015 IBM Corporation and others All rights reserved. This
  * program and the accompanying materials are made available under the terms of
  * the Eclipse Public License v1.0 which accompanies this distribution, and is
  * available at http://www.eclipse.org/legal/epl-v10.html
@@ -415,7 +415,7 @@ public class RequestHandler {
 	private static Long numberToLong(Number number) {
 		if (number == null)
 			return null;
-		return new Long(number.longValue());
+		return Long.valueOf(number.longValue());
 	}
 
 	/**
