@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2009, 2012 IBM Corporation and others All rights reserved. This
+ * Copyright (c) 2009, 2015 IBM Corporation and others All rights reserved. This
  * program and the accompanying materials are made available under the terms of
  * the Eclipse Public License v1.0 which accompanies this distribution, and is
  * available at http://www.eclipse.org/legal/epl-v10.html
@@ -157,7 +157,7 @@ public class RhinoDebuggerImpl implements Debugger, ContextFactory.Listener {
 			}
 			else {
 				//a totally new script is loaded
-				id = new Long(currentScriptId++);
+				id = Long.valueOf(currentScriptId++);
 				newscript.setId(id);
 			}
 			uriToScript.put(uri, newscript);
@@ -249,7 +249,7 @@ public class RhinoDebuggerImpl implements Debugger, ContextFactory.Listener {
 		}
 		Long threadId = (Long) threadToThreadId.get(thread);
 		if (threadId == null) {
-			threadId = new Long(currentThreadId++);
+			threadId = Long.valueOf(currentThreadId++);
 			threadToThreadId.put(thread, threadId);
 		}
 		ThreadData threadData = (ThreadData) threadIdToData.get(threadId);
@@ -443,7 +443,7 @@ public class RhinoDebuggerImpl implements Debugger, ContextFactory.Listener {
 	 * @return the next unique breakpoint id to use
 	 */
 	private synchronized Long nextBreakpointId() {
-		return new Long(currentBreakpointId++);
+		return Long.valueOf(currentBreakpointId++);
 	}
 
 	/**
