@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2010, 2012 IBM Corporation and others All rights reserved. This
+ * Copyright (c) 2010, 2015 IBM Corporation and others All rights reserved. This
  * program and the accompanying materials are made available under the terms of
  * the Eclipse Public License v1.0 which accompanies this distribution, and is
  * available at http://www.eclipse.org/legal/epl-v10.html
@@ -482,7 +482,7 @@ public class StackFrame implements DebugFrame {
 	private Long createHandle(Object object) {
 		Long handle = (Long) handledObjects.get(object);
 		if (handle == null) {
-			handle = new Long(nextHandle());
+			handle = Long.valueOf(nextHandle());
 			handles.put(handle, object);
 			handledObjects.put(object, handle);
 		}
