@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2010 IBM Corporation and others.
+ * Copyright (c) 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -93,7 +93,7 @@ public class ThreadReferenceImpl extends MirrorImpl implements ThreadReference {
 			}
 			frames = new ArrayList();
 			for (Iterator iterator = frameIds.iterator(); iterator.hasNext();) {
-				Long frameId = new Long(((Number) iterator.next()).longValue());
+				Long frameId = Long.valueOf(((Number) iterator.next()).longValue());
 				StackFrameImpl frame = createStackFrame(frameId);
 				frames.add(frame);
 			}
